[package]
name = "reliost"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mstange/reliost/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
bytes = "1.11.1"
config = "0.15"
flate2 = "1.1.2"
humantime-serde = "1.1.1"
parse-size = "1.1.0"
samply-quota-manager = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["io", "io-util"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# wholesym = { path = "../samply/wholesym", features = ["api"] }
wholesym = { git = "https://github.com/mstange/samply", rev = "0aaa30880e6b2d31eea06e3edbef3b39ead5469b", features = ["api"] }

[dev-dependencies]
reqwest = "0.13"

[profile.release]
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
debug = 2
